--- a/style.css
+++ b/style.css
@@ -541,10 +541,10 @@ footer {
         font-size: 2.5rem;
     }
     
-    .cta-button {
-        padding: 1rem 2rem;
-        font-size: 1rem;
-    }
+    /* .cta-button { */
+        /* padding: 1rem 2rem; */
+        /* font-size: 1rem; */
+    /* } */
     
     .stat-number {
         font-size: 2.5rem;
