--- a/style.css
+++ b/style.css
@@ -694,17 +694,17 @@ footer {
 
     .hero-subtitle {
     font-family: 'Montserrat', sans-serif;
-    font-size: clamp(1rem, 2.2vw, 4rem);
+    font-size: clamp(0.9rem, 2.2vw, 4rem);
     font-weight: 600;
     max-width: 700px;
     margin: 0 auto 3rem;
     color: #ccc;
     animation: fadeIn 1s ease-out 0.5s backwards;
     line-height: 1.8;
-    }
+    } */
 
     .hero-subtitle .highlight {
-    font-size: clamp(0.9rem, 2.2vw, 3rem);
+    font-size: clamp(1rem, 2.2vw, 3rem);
     color: var(--construction-yellow);
     font-weight: 600;
     display: block;
