--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ header {
 
 .cta-sub {
     display: block;
-    font-size: 0.8rem;
+    font-size: clamp(0.6rem, 1.4vw, 2rem);
     margin-top: 0.3rem;
     opacity: 0.9;
     font-weight: 500;
